--- a/Lab 5 Demo/styles.css
+++ b/Lab 5 Demo/styles.css
@@ -88,3 +88,77 @@ footer {
     color: turquoise;
     text-shadow: 2px 2px 2px black;
 }
+
+/* Tablet Styles */
+
+@media screen and (min-width: 768px) {
+    header img {
+        display: block;
+        width: 65%;
+        margin: 10px auto;
+    }
+
+    nav li {
+        display: inline-block;
+    }
+
+    nav li a {
+        width: 300px;
+    }
+
+    section img, aside img {
+        display: block;
+        width: 75%;
+        margin: 0 auto;
+    }
+
+    section h1 {
+        font-size: 2em;
+    }
+
+    aside h2, aside h3 {
+        font-size: 1.7em;
+    }
+}
+
+/* Desktop Styles */
+
+@media screen and (min-width: 1024px) {
+    header img {
+        width: 50%;
+    }
+
+    header {
+        border-radius: 20px 20px 0 0;
+    }
+
+    nav li a {
+        width: 175px;
+    }
+
+    nav li a:hover {
+        border-radius: 20px;
+        color: bisque;
+        text-shadow: 1px 1px 1px black;
+    }
+
+    main {
+        display: flex;
+    }
+
+    section, aside {
+        margin: 10px;
+    }
+
+    section {
+        width: 70%;
+    }
+
+    aside {
+        width: 30%;
+    }
+
+    footer {
+        border-radius: 0 0 20px 20px;
+    }
+}
