--- a/Final/css/styles.css
+++ b/Final/css/styles.css
@@ -11,7 +11,7 @@ h2, h3 {
 }
 
 a {
-    color: rgb(200, 217, 240);
+    color: slategrey;
     text-align: center;
     display: block;
     text-decoration: none;
